# chdig

./: .exrc  .gitignore  .gitmodules  .pre-commit-config.yaml  .yamllint  Cargo.toml  LICENSE  Makefile  README.md  TODO.md  build.rs  chdig-nfpm.yaml  typos.toml
.cargo/: audit.toml
.github/workflows/: build.yml  pre_release.yml  pull_request.yml  release.yml
Documentation/: Actions.md  Bugs.md  Developers.md  FAQ.md
contrib/flameshow/: Cargo.toml  build.rs  pyoxidizer.bzl
contrib/flameshow/src/: lib.rs
src/: actions.rs  bin.rs  chdig.rs  lib.rs  main.rs  pastila.rs  shortcuts.rs  utils.rs
src/common/: chart.rs  mod.rs  relative_date_time.rs  sparkline.rs  stopwatch.rs
src/interpreter/: background_runner.rs  clickhouse.rs  clickhouse_compatibility.rs  clickhouse_perfetto.rs  clickhouse_quirks.rs  context.rs  debug_metrics.rs  flamegraph.rs  mod.rs  options.rs  perfetto.rs  query.rs  query_process.rs  worker.rs
src/view/: ext_table_view.rs  log_store.rs  log_view.rs  merges_view.rs  mod.rs  navigation.rs  process_view.rs  processes_view.rs  provider.rs  queries_view.rs  query_result_view.rs  query_view.rs  registry.rs  replicas_view.rs  replicated_fetches_view.rs  replication_queue_view.rs  search_history.rs  settings_view.rs  sql_query_view.rs  summary_view.rs  table_view.rs  text_log_view.rs  updating_table_view.rs  updating_view.rs  utils.rs
src/view/providers/: asynchronous_inserts.rs  asynchronous_metric_log.rs  background_schedule_pool.rs  background_schedule_pool_log.rs  backups.rs  client.rs  dictionaries.rs  error_log.rs  errors.rs  logger_names.rs  merges.rs  metric_log.rs  mod.rs  mutations.rs  object_storage_queue.rs  part_log.rs  processes.rs  queries.rs  query_patterns.rs  query_patterns_metrics.rs  replicas.rs  replicated_fetches.rs  replication_queue.rs  s3queue.rs  server_logs.rs  table_parts.rs  tables.rs
tests/: integration.rs  tui.rs
tests/common/: mod.rs
tests/configs/: accept_invalid_certificate.yaml  basic.xml  basic.yaml  chdig_basic.yaml  chdig_partial.yaml  connections.yaml  tls.xml  tls.yaml  unknown_directives.xml
