[package]
name = "chdig"
authors = ["Azat Khuzhin <a3at.mail@gmail.com>"]
homepage = "https://github.com/azat/chdig"
repository = "https://github.com/azat/chdig"
readme = "README.md"
description = "Dig into ClickHouse with TUI interface"
license = "MIT"
version = "0.6.1"
edition = "2021"

[features]
default = ["flameshow", "tls"]
flameshow = ["dep:flameshow"]
tls = ["clickhouse-rs/tls-rustls"]

# TODO: convert this into feature set, but I'm not sure that it is easy right now (see [1]).
#  [1]: https://github.com/rust-lang/cargo/issues/1197
[target.'cfg(not(target_family = "windows"))'.dependencies]
cursive = { version = "*", default-features = false, features = ["termion-backend"] }
skim = "*"
[target.'cfg(target_family = "windows")'.dependencies]
# crossterm backend does not support Alt-<Key> bindings (interpret as just <Key>)
cursive = { version = "*", default-features = false, features = ["crossterm-backend"] }

[dependencies]
# Basic
anyhow = { version = "*", default-features = false, features = ["std"] }
size = { version = "*", default-features = false, features = ["std"] }
tempfile = { version = "*", default-features = false }
url = { version = "*", default-features = false }
humantime = { version = "*", default-features = false }
backtrace = { version = "*", default-features = false, features = ["std"] }
futures = { version = "*", default-features = false, features = ["std"] }
# chrono/chrono-tz should match clickhouse-rs
chrono = { version = "0.4", default-features = false }
chrono-tz = { version = "0.8", default-features = false }
flexi_logger = { version = "0.22", default-features = false }
log = { version = "0.4", default-features = false }
futures-util = { version = "*", default-features = false }
semver = { version = "*", default-features = false }
stopwatch = { version = "*", default-features = false }
serde = { version = "*", features = ["derive"] }
serde_yaml = { version = "*", default-features = false }
quick-xml = { version = "*", features = ["serialize"] }
urlencoding = { version = "*", default-features = false }
warp = { version = "*", default-features = false }
# CLI
clap = { version = "*", default-features = false, features = ["derive", "env", "help", "usage", "std", "color", "error-context", "suggestions"] }
clap_complete = { version = "*", default-features = false }
# UI
cursive_buffered_backend = { version = "0.6.1", default-features = false }
cursive-syntect = { version = "*", default-features = false, features = ["regex-onig"] }
# Patches:
# - Change focus - https://github.com/BonsaiDen/cursive_table_view/pull/40
cursive_table_view = { git = "https://github.com/azat-rust/cursive_table_view", branch = "next", default-features = false }
# Patches:
# - Fix for date format - https://github.com/deinstapel/cursive-flexi-logger-view/pull/13
cursive-flexi-logger-view = { git = "https://github.com/azat-rust/cursive-flexi-logger-view", branch = "next", default-features = false }
syntect = { version = "*", default-features = false, features = ["default-syntaxes", "default-themes"] }
#
# Drivers
#
# Patches:
# - rustls
# - no panic on broken protocol
clickhouse-rs = { git = "https://github.com/azat-rust/clickhouse-rs", branch = "next", default-features = false, features = ["tokio_io"] }
tokio = { version = "*", default-features = false, features = ["macros"] }

[dependencies.flameshow]
path = "contrib/flameshow"
optional = true

[profile.release]
lto = true
