[package]
name = "chdig"
authors = ["Azat Khuzhin <a3at.mail@gmail.com>"]
homepage = "https://github.com/azat/chdig"
repository = "https://github.com/azat/chdig"
readme = "README.md"
description = "Dig into ClickHouse with TUI interface"
license = "MIT"
version = "25.8.1"
edition = "2024"

[lib]
name = "chdig"
crate-type = ["staticlib", "lib"]
path = "src/lib.rs"

[[bin]]
name = "chdig"
path = "src/main.rs"

[features]
default = ["tls"]
tls = ["clickhouse-rs/tls-rustls"]

# Patches:
# - Fix Alt+Shift+Char for crossterm backend - https://github.com/gyscos/cursive/pull/827
# - Properly clear terminal on Cursive::clear() - https://github.com/gyscos/cursive/pull/828
[patch.crates-io]
cursive = { git = "https://github.com/azat-rust/cursive", branch = "chdig-25.7" }
cursive_core = { git = "https://github.com/azat-rust/cursive", branch = "chdig-25.7" }

# TODO: convert this into feature set, but I'm not sure that it is easy right now (see [1]).
#  [1]: https://github.com/rust-lang/cargo/issues/1197
[target.'cfg(not(target_family = "windows"))'.dependencies]
skim = "*"

[dependencies]
# Basic
anyhow = { version = "*", default-features = false, features = ["std"] }
size = { version = "*", default-features = false, features = ["std"] }
tempfile = { version = "*", default-features = false }
url = { version = "*", default-features = false }
humantime = { version = "*", default-features = false }
backtrace = { version = "*", default-features = false, features = ["std"] }
futures = { version = "*", default-features = false, features = ["std"] }
strfmt = { version = "*", default-features = false }
# chrono/chrono-tz should match clickhouse-rs
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
chrono-tz = { version = "0.8", default-features = false }
flexi_logger = { version = "0.27", default-features = false }
log = { version = "0.4", default-features = false }
futures-util = { version = "*", default-features = false }
semver = { version = "*", default-features = false }
serde = { version = "*", features = ["derive"] }
serde_yaml = { version = "*", default-features = false }
quick-xml = { version = "*", features = ["serialize"] }
urlencoding = { version = "*", default-features = false }
percent-encoding = { version = "*", default-features = false }
warp = { version = "*", default-features = false, features = ["server"] }
# CLI
clap = { version = "*", default-features = false, features = ["derive", "env", "help", "usage", "std", "color", "error-context", "suggestions"] }
clap_complete = { version = "*", default-features = false }
# UI
cursive = { version = "*", default-features = false, features = ["crossterm-backend"] }
cursive-syntect = { version = "*", default-features = true }
unicode-width = "0.1"
# Patches:
# - Change focus - https://github.com/BonsaiDen/cursive_table_view/pull/40
cursive_table_view = { git = "https://github.com/azat-rust/cursive_table_view", branch = "next", default-features = false }
# Patches:
# - Fix for date format - https://github.com/deinstapel/cursive-flexi-logger-view/pull/13
cursive-flexi-logger-view = { git = "https://github.com/azat-rust/cursive-flexi-logger-view", branch = "next", default-features = false }
syntect = { version = "*", default-features = false, features = ["default-syntaxes", "default-themes"] }
#
# Drivers
#
# Patches:
# - https://github.com/suharev7/clickhouse-rs/pull/226 - Properly handle terminated connection by the server and fix CI
# - https://github.com/suharev7/clickhouse-rs/pull/227 - mTLS
clickhouse-rs = { git = "https://github.com/azat-rust/clickhouse-rs", branch = "next", default-features = false, features = ["tokio_io"] }
tokio = { version = "*", default-features = false, features = ["macros"] }
# Flamegraphs
flamelens = { git = "https://github.com/ys-l/flamelens", branch = "main", default-features = false }
ratatui = { version = "0.29.0", features = ["unstable-rendered-line-info"] }
crossterm = { version = "0.28.1", features = ["use-dev-tty"] }

[dev-dependencies]
pretty_assertions = { version= "*", default-features = false, features = ["alloc"] }

[profile.release]
# Too slow and does not worth it
lto = false

[lints.clippy]
needless_return = "allow"
type_complexity = "allow"
uninlined_format_args = "allow"

[lints.rust]
elided_lifetimes_in_paths = "deny"
