[package]
name = "flameshow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyembed = { version = "0.23", default-features = false }
pyo3 = { version = "0.17.3", default-features = false }
anyhow = { version = "*", default-features = false, features = ["std"] }
